# cvsnt-sjis

./: .hgignore  .hgtags  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.guess  config.h.in  configure  configure.in  cvsnt.dsp  cvsnt.dsw  cvsnt.iss  cvsnt.sln  cvsnt.vcproj  extnt.ini  ltmain.sh  mkchangelog  mkinstalldirs  test.txt  version.h  version_fu.h  version_no.h
ack139/: .cvsignore  Makefile.in  ack.1  ack.doc  ackstring.h  codetoeuc.c  codetojis.c  codetosjis.c  codetozen.c  euctocode.c  fileio.c  kanjicheck.c  kanjicode.h  kanjisub.c  kanjixcheck.c  kmain.c  lcode.c  sjistocode.c  string.c  z.c  zenmap
autom4te.cache/: output.0  traces.0
contrib/: Makefile.am  Makefile.in  genkey  rcs2log.sh
contrib_nt/: README.txt  commit_prep.pl  cvs2cl.pl  log_accum.pl
contrib_nt/com_example/: Class1.cs  cvscom.csproj  cvscom.sln  readme.txt
contrib_nt/dll_example/: cvsdll.cpp  cvsdll.vcproj  readme.txt  stdafx.cpp  stdafx.h
cvs95/: cvs95.dsp  cvs95.rc  cvs95.vcproj
cvsagent/win32/: AboutDialog.cpp  ListenServer.cpp  ListenServer.h  PasswordDialog.cpp  PasswordDialog.h  cvsagent.cpp  cvsagent.rc  (+3 more)
cvsdelta/: Makefile.am  Makefile.in  cvsdelta.cpp  cvsdelta.h  cvsdelta.vcproj  libinterface.cpp
cvsgui/: Makefile.am  Makefile.in  URI_encode.cpp  URI_encode.h  cvsgui.c  cvsgui.h  cvsgui_process.cpp  cvsgui_process.h  cvsgui_wire.cpp  readme.txt  readme_gottani_temp.txt
cvsntcpl/: Applet.cpp  NewRootDialog.cpp  NewRootDialog.h  RepositoryPage.cpp  RepositoryPage.h  SslSettingPage.cpp  SslSettingPage.h  StdAfx.h  TooltipPropertyPage.cpp  TooltipPropertyPage.h  advancedpage.cpp  advancedpage.h  cvsnt.cpp  cvsnt.h  cvsnt1.cpp  cvsnt1.h  cvsntcpl.dsp  cvsntcpl.rc  cvsntcpl.vcproj  resource.h  resrc1.h  serverPage.cpp  serverPage.h
cvsservice/: Service.cpp  ServiceMsg.rc  cvsservice.dsp  cvsservice.rc  cvsservice.vcproj
debian/: README.Debian  TODO.Debian  changelog  conffiles  config  control  copyright  cron.weekly  cvs-makerepos  cvs-makerepos.1  cvs-pserver  cvs.doc-base  cvs.doc-base.client  cvs.info  cvsconfig  cvsconfig.1  cvslockd  cvsnt.equiv  dirs  docs  postinst  postrm  preinst  rcs2log.1  rules  templates
diff/: Makefile.in  analyze.c  context.c  diff.c  diff.h  diff3.c  dir.c  ifdef.c  io.c  libdiff.dsp  libdiff.vcproj  system.h  util.c
doc/: CVSvn.texi  Makefile.am  PServer.example  README.DOCUMENTATION  build  build.bat  cvs.dbk  cvs.texi  cvsclient.dbk  cvsclient.texi
extnt/: StdAfx.cpp  StdAfx.h  extnt.cpp  extnt.rc  extnt.vcproj  resource.h
genkey/: genkey.c  genkey.dsp  genkey.vcproj
hpux/: build_hpux32  build_hpux64  cvsnt.psf  make_package
lib/: Makefile.am  Makefile.in  daemon.h  fncase.c  fnmatch.c  getaddrinfo.h  getdate.c  getdate.y  getdelim.c  getdelim.h  getline.c  getline.h  getopt1.c  getopt1.h  getopt_long.c  inet_aton.h  regcomp.c  regex.c  regex1.h  savecwd.h  system.h  timegm.c  timegm.h  xgetwd.c  yesno.c
libltdl/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config-h.in  configure  configure.ac  configure.in  install-sh  ltdl.c
lockservice/: LockParse.cpp  LockService.h  Makefile.am  Makefile.in  cvslock_protocol.txt  cvslockd.cpp  lockservice.cpp  lockservice.dsp  lockservice.rc  lockservice.vcproj  resource.h  server.cpp
man/: Makefile.in  cvs.1  cvs.5
osx/: build-mac
plink/: BE_CVSNT.C  CONSOLE_CVSNT.C  PLINK.RC  PLINK_CVSNT.C  RESOURCE.H  SETTINGS.C  plink.dsp  plink.vcproj  plink_cvsnt.h
postinst/: StdAfx.h  postinst.cpp  postinst.dsp  postinst.vcproj
protocols/: Makefile.am  Makefile.in  common.c  common.h  ext.c  ext_protocol.dsp  ext_protocol.vcproj  fork.c  fork_protocol.dsp  fork_protocol.vcproj  gserver.c  gserver_protocol_ad.dsp  gserver_protocol_ad.vcproj  gserver_protocol_mit.dsp  gserver_protocol_mit.vcproj  ntserver.c  ntserver_protocol.dsp  ntserver_protocol.vcproj  protocol_interface.h  pserver.c  pserver_protocol.dsp  pserver_protocol.vcproj  scramble.c  scramble.h  server.c  server_protocol.dsp  server_protocol.vcproj  sserver.c  sserver_protocol.dsp  sserver_protocol.vcproj  ssh.c  ssh_protocol.dsp  ssh_protocol.vcproj  sspi.c  sspi_protocol.dsp  sspi_protocol.vcproj  sspi_unix.c
protocols/ntlm/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  libntlm.pc.in  ntlm.h  ntlm.h.in  smbbyteorder.h  smbdes.c  smbdes.h  smbencrypt.c  smbencrypt.h  smbmd4.c  smbmd4.h  smbutil.c  version.c
rcs/: Makefile.am  Makefile.in  co.cpp  co.dsp  co.vcproj  common.cpp  common.h  rcsdiff.cpp  rcsdiff.dsp  rcsdiff.vcproj  rlog.cpp  rlog.dsp  rlog.vcproj
redhat/: cvslockd  cvsnt-pam  cvsnt-xinetd  cvsnt.spec  cvsnt.spec.in
solaris/: build_solaris32  build_solaris64  make_package
src/: Makefile.am  Makefile.in  add.c  admin.c  annotate.c  buffer.c  buffer.h  chacl.c  checkin.c  checkout.c  chown.c  classify.c  client.c  client.h  commit.c  create_adm.c  cvs.h  cvsrc.c  cvsrcs.c  cvsroott.h  diff.c  edit.c  edit.h  entries.c  error.c  error.h  expand_path.c  fileattr.c  filesubr.c  find_names.c  hardlink.c  hash.c  hash.h  history.c  ignore.c  import.c  info.c  infolib.h  infolib_unix.cpp  library.h  (+44 more)
su/: stdafx.cpp  stdafx.h  su.cpp  su.sln  su.vcproj
testcvs/: testcvs.bat  testcvs.py
tonys scripts/: clean.bat  debug cvs.bat  lock server.bat  mkweb  release cvs.bat  release_builder.bat  release_builder.sh  snapshot.bat  test server.bat
ufc-crypt/: crypt.dsp  crypt.dsw  crypt.vcproj
unicodeapi/: Makefile.am  Makefile.in  unicodeapi.c  unicodeapi.h  unicodeapi.vcproj
uninsthlp/: uninsthlp.cpp  uninsthlp.dsp  uninsthlp.vcproj
windows-NT/: Makefile.am  Makefile.in  VersionInfoCommon.rc2  cvscom.idl  cvscom_i.c  cvsnt.rc  filesubr.c  infolib.cpp  library.c  mkdir.c  ndir.c  ndir.h  options.h  pwd.c  pwd.h  resource.h  run.c  setuid.c  sjispath.c  sjispath.h  stripslash.c  version_no.h  waitpid.c  win32.c
zlib/: ChangeLog  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
(+142 files in other folders)
