## Process this file with automake to produce Makefile.in
# Makefile for GNU CVS program.
# Copyright (C) 1986, 1988-1990, 2000 Free Software Foundation, Inc.

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

AM_CPPFLAGS = -I$(top_srcdir)/lib $(includeopt) 

noinst_LIBRARIES = libunicodeapi.a

libunicodeapi_a_SOURCES = unicodeapi.cpp

libunicodeapi_a_CFLAGS = $(AM_CFLAGS)
